--- a/mycode/python/parsecfg/config.ini
+++ b/mycode/python/parsecfg/config.ini
@@ -3,33 +3,328 @@
 tdir	= /mtx_5x9_panlin/
 cdir	= /root/mtxcode/head/mtx/code/
 main	= mtx_5x9
-sub		= smtpfs_eb,
+sub		= mtx, smtpfs_eb, smtpfs, pop3fs_eb, pop3fs, imapfs_eb, imapfs, httpfs_eb, httpfs, conn, netflow, ftpctl, tcpstream, charset, dns, dns_block, dpdkprx, netflow_icmp, map, mapbase, nasm, perform, spooky, tcp_block, tcpdump, record2k, record5k, dpdk, dpdkstat, filefilter, fileidt, geoip, hsctd, mnthread, txburst, zfd, 
 
+#mtx
+[mtx]
+tdir	= ./
+cdir	= mtx
+target	= mtx,
+cmd		= make clean , make deps, make debug, 
+move	= yes
+deps	= 
+
+#ssnalgo
 [smtpfs_eb]
-tdir	= ssnaglo
-cdir	= ssnaglo/smtpfs_eb2
+tdir	= ssnalgo
+cdir	= ssnalgo/smtpfs_eb2
 target	= smtpfs_eb.so,
-mode	= debug
-dep		= 
+cmd		= make clean, make debug, 
+move	= yes
+deps	= 
+
+[smtpfs]
+tdir	= ssnalgo
+cdir	= ssnalgo/smtpfs
+target	= smtpfs.so,
+cmd		= make clean, make debug, 
+move	= yes
+deps	= 
+
+[pop3fs_eb]
+tdir	= ssnalgo
+cdir	= ssnalgo/pop3fs_eb2
+target	= pop3fs_eb.so,
+cmd		= make clean, make debug, 
+move	= yes
+deps	= 
+
+[pop3fs]
+tdir	= ssnalgo
+cdir	= ssnalgo/pop3fs
+target	= pop3fs.so,
+cmd		= make clean, make debug, 
+move	= yes
+deps	= 
+
+[imapfs_eb]
+tdir	= ssnalgo
+cdir	= ssnalgo/imapfs_eb2
+target	= imapfs_eb.so,
+cmd		= make clean, make debug, 
+move	= yes
+deps	= 
+
+[imapfs]
+tdir	= ssnalgo
+cdir	= ssnalgo/imapfs
+target	= imapfs.so,
+cmd		= make clean, make debug, 
+move	= yes
+deps	= 
 
 [httpfs_eb]
-tdir	= ssnaglo
-cdir	= ssnaglo/httpfs_eb2
+tdir	= ssnalgo
+cdir	= ssnalgo/httpfs_eb2
 target	= httpfs_eb.so,
-mode	= debug
-dep		= 
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[httpfs]
+tdir	= ssnalgo
+cdir	= ssnalgo/httpfs_509
+target	= httpfs.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[conn]
+tdir	= ssnalgo
+cdir	= ssnalgo/conn
+target	= conn.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[ftpctl]
+tdir	= ssnalgo
+cdir	= ssnalgo/ftpctl
+target	= ftpctl.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[netflow]
+tdir	= ssnalgo
+cdir	= ssnalgo/netflow
+target	= netflow9.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= netflow_tool, 
+
+[netflow_tool]
+tdir	= ./
+cdir	= ssnalgo/netflow/tools
+target	= netflow_file,
+cmd		= make clean, make debug,
+move	= yes
+deps	=  
+
+[tcpstream]
+tdir	= ssnalgo
+cdir	= ssnalgo/tcpstream
+target	= tcpstream.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+#plugin
+[charset]
+tdir	= plugin
+cdir	= plugin/charset2
+target	= charset.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[dns]
+tdir	= plugin
+cdir	= plugin/dns
+target	= dns.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[dns_block]
+tdir	= plugin
+cdir	= plugin/dns_block
+target	= dns_block.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[dpdkprx]
+tdir	= plugin
+cdir	= plugin/dpdkprx
+target	= dpdkprx.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[record2k]
+tdir	= plugin
+cdir	= plugin/record2k
+target	= tdsvc.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[record5k]
+tdir	= plugin
+cdir	= plugin/record5k
+target	= tdsvc5k.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[spooky]
+tdir	= plugin
+cdir	= plugin/spooky
+target	= spooky.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[mapbase]
+tdir	= plugin
+cdir	= plugin/mapbase
+target	= mapbase.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[map]
+tdir	= plugin
+cdir	= plugin/map
+target	= map.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[netflow_icmp]
+tdir	= plugin
+cdir	= plugin/netflow_icmp
+target	= icmp_netflow.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[nasm]
+tdir	= plugin
+cdir	= plugin/nasm
+target	= nasm.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[perform]
+tdir	= plugin
+cdir	= plugin/perform
+target	= perform.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[tcp_block]
+tdir	= plugin
+cdir	= plugin/http_block
+target	= tcp_block.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[tcpdump]
+tdir	= plugin
+cdir	= plugin/tcpdump2
+target	= tcpdump.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[dpdk]
+tdir	= dpdk
+cdir	= driver/dpdk3
+target	= dpdk_drv3.so,dpdk_ifg,
+cmd		= make clean, make debug, make dpdk_ifg
+move	= yes
+deps	= 
+
+[dpdkstat]
+tdir	= dpdkstat
+cdir	= plugin/dpdkstat
+target	= dpdkstat.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[fileidt]
+tdir	= fileidt
+cdir	= plugin/fileidt
+target	= fileidt.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[filetype]
+tdir	= filetype
+cdir	= plugin/filetype
+target	= filetype.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[geoip]
+tdir	= geoip
+cdir	= geoip/cert5x9
+target	= libgeoip.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[hsctd]
+tdir	= hsctd
+cdir	= ctplug/hyperscan
+target	= hsctd1.so, hsctd2.so, hsctd3.so, hsctd12.so, hsctd23.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[mnthread]
+tdir	= mnthread
+cdir	= plugin/mnthread
+target	= mnthread.so, mnsvc,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[filefilter]
+tdir	= filefilter
+cdir	= plugin/filefilter
+target	= filefilter.so,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[txburst]
+tdir	= txburst
+cdir	= plugin/txburst
+target	= txburst.so, txburst.conf,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
 
 [zfd]
 tdir	= zfd
 cdir	= plugin/zfd
 target	= zfd.so, zfd.conf,
-mode	= debug
-dep		= libspooky,
+cmd		= make clean, make debug,
+move	= yes
+deps	= libspooky, zfd_tools,
 
 [libspooky]
-tdir	= zfd/spooky
-cdir	= 
-target	= spooky,
-mode	= debug
-dep		= 
+tdir	= 
+cdir	= plugin/zfd/spooky
+target	= libspookyv2.so,
+cmd		= make clean, make,
+move	= no
+deps	= 
+
+[zfd_tool]
+tdir	= ./
+cdir	= plugin/zfd/tools
+target	= zfd_file, udpserver,
+cmd		= make clean, make debug,
+move	= yes
+deps	= 
 
