--- a/mycode/python/parsecfg/config.ini
+++ b/mycode/python/parsecfg/config.ini
@@ -3,7 +3,8 @@
 tdir	= /mtx_5x9_panlin/
 cdir	= /root/mtxcode/head/mtx/code/
 main	= mtx_5x9
-sub		= mtx, smtpfs_eb, smtpfs, pop3fs_eb, pop3fs, imapfs_eb, imapfs, httpfs_eb, httpfs, conn, netflow, ftpctl, tcpstream, charset, dns, dns_block, dpdkprx, netflow_icmp, map, mapbase, nasm, perform, spooky, tcp_block, tcpdump, record2k, record5k, dpdk, dpdkstat, filefilter, fileidt, geoip, hsctd, mnthread, txburst, zfd, 
+sub		= mtx, smtpfs_eb, smtpfs, pop3fs_eb, pop3fs, imapfs_eb, imapfs, httpfs_eb, httpfs, conn, netflow, ftpctl, tcpstream, charset, dns, dns_block, dpdkprx, netflow_icmp, map, mapbase, nasm, perform, spooky, tcp_block, tcpdump, record2k, record5k, dpdk, dpdkstat, filefilter, fileidt, geoip, hsctd, mnthread, txburst, zfd, so, 
+#sub		= so, 
 
 #mtx
 [mtx]
@@ -243,7 +244,7 @@ deps	=
 [dpdkstat]
 tdir	= dpdkstat
 cdir	= plugin/dpdkstat
-target	= dpdkstat.so,
+target	= dpdkstat.so, memzone.py,
 cmd		= make clean, make debug,
 move	= yes
 deps	= 
@@ -310,7 +311,7 @@ cdir	= plugin/zfd
 target	= zfd.so, zfd.conf,
 cmd		= make clean, make debug,
 move	= yes
-deps	= libspooky, zfd_tools,
+deps	= libspooky, zfd_tool,
 
 [libspooky]
 tdir	= 
@@ -325,6 +326,14 @@ tdir	= ./
 cdir	= plugin/zfd/tools
 target	= zfd_file, udpserver,
 cmd		= make clean, make debug,
+move	= yes
+deps	= 
+
+[so]
+tdir	= ./
+cdir	= ssnalgo/httpfs_eb2
+target	= <so>,
+cmd		= 
 move	= yes
 deps	= 
 
